# src/main/java/com/example/samplebootapp/presentation/order/api/CartController.java
@@ -16,7 +16,7 @@ import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.ResponseStatus;
 import org.springframework.web.bind.annotation.RestController;
 
-@Tag(name = "Cart", description = "カートAPI")
+@Tag(name = "注文コンテキスト (Order Context)", description = "カートAPI")
 @RestController
 @RequestMapping("/api/cart")
 public class CartController {
